// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Download component matches the snapshot 1`] = `
.c7 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c7:hover,
.c7:focus {
  color: #fff;
}

.c7:hover,
.c7:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c7:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c6 {
  background-repeat: no-repeat;
  background-image: url( download.svg );
  background-position: 8px 50%;
  background-size: 24px;
  padding-left: 36px;
}

.c0 {
  margin: 8px;
  padding: 16px 16px 0 16px;
  background-color: #f1f1f1;
  text-align: center;
}

.c3 {
  width: 112px;
  height: 112px;
  padding: 0 0 5px 0;
  margin-top: 24px;
}

.c4 {
  padding: 0;
  margin: 0 0 24px 0;
}

.c5 {
  list-style: none;
  text-align: center;
  margin: 24px 0 0;
}

.c1 {
  display: block;
  font-size: 1.375em;
  min-height: 4em;
  font-weight: 400;
  line-height: 1.2;
  margin: 0;
}

.c2 {
  font-weight: 300;
}

.c8 {
  font-size: 0.875em;
  font-weight: 300;
  margin: 2px 0 0;
}

@media screen and ( min-width:1356px ) {
  .c0 {
    width: calc( ( 100% - 32px - 32px ) / 4 );
  }
}

@media screen and ( max-width:1355px ) {
  .c0 {
    width: calc( ( 100% - 32px ) / 2 );
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    width: 100%;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Yoast SEO
  </span>
  <p
    className="c2"
  >
     
    version 4.7
  </p>
  <img
    alt=""
    className="c3"
    src="Yoast_SEO_Icon_Small.svg"
  />
  <ul
    className="c4"
  >
    <li
      className="c5"
    >
      <a
        aria-label="Download Yoast SEO for Wordpress"
        className="c6 c7"
        href="http://example.org/plugin.zip"
        onClick={null}
        rel={null}
        target={null}
      >
        Download
      </a>
      <p
        aria-hidden="true"
        className="c8"
      >
        for Wordpress
      </p>
    </li>
    <li
      className="c5"
    >
      <a
        aria-label="Download Yoast SEO for Drupal"
        className="c6 c7"
        href="http://example.org/plugin.zip"
        onClick={null}
        rel={null}
        target={null}
      >
        Download
      </a>
      <p
        aria-hidden="true"
        className="c8"
      >
        for Drupal
      </p>
    </li>
  </ul>
</div>
`;

exports[`The Download component without a currentVersion matches the snapshot 1`] = `
.c6 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c6:hover,
.c6:focus {
  color: #fff;
}

.c6:hover,
.c6:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c6:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c5 {
  background-repeat: no-repeat;
  background-image: url( download.svg );
  background-position: 8px 50%;
  background-size: 24px;
  padding-left: 36px;
}

.c0 {
  margin: 8px;
  padding: 16px 16px 0 16px;
  background-color: #f1f1f1;
  text-align: center;
}

.c2 {
  width: 112px;
  height: 112px;
  padding: 0 0 5px 0;
  margin-top: 24px;
}

.c3 {
  padding: 0;
  margin: 0 0 24px 0;
}

.c4 {
  list-style: none;
  text-align: center;
  margin: 24px 0 0;
}

.c1 {
  display: block;
  font-size: 1.375em;
  min-height: 4em;
  font-weight: 400;
  line-height: 1.2;
  margin: 0;
}

.c7 {
  font-size: 0.875em;
  font-weight: 300;
  margin: 2px 0 0;
}

@media screen and ( min-width:1356px ) {
  .c0 {
    width: calc( ( 100% - 32px - 32px ) / 4 );
  }
}

@media screen and ( max-width:1355px ) {
  .c0 {
    width: calc( ( 100% - 32px ) / 2 );
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    width: 100%;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Yoast SEO
  </span>
  
  <img
    alt=""
    className="c2"
    src="Yoast_SEO_Icon_Small.svg"
  />
  <ul
    className="c3"
  >
    <li
      className="c4"
    >
      <a
        aria-label="Download Yoast SEO for Wordpress"
        className="c5 c6"
        href="http://example.org/plugin.zip"
        onClick={null}
        rel={null}
        target={null}
      >
        Download
      </a>
      <p
        aria-hidden="true"
        className="c7"
      >
        for Wordpress
      </p>
    </li>
    <li
      className="c4"
    >
      <a
        aria-label="Download Yoast SEO for Drupal"
        className="c5 c6"
        href="http://example.org/plugin.zip"
        onClick={null}
        rel={null}
        target={null}
      >
        Download
      </a>
      <p
        aria-hidden="true"
        className="c7"
      >
        for Drupal
      </p>
    </li>
  </ul>
</div>
`;
